first version of the project

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { // Bağlantı dizesi
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb; Integrated Security = true;"
+  }
 }
