--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { // Bağlantı dizesi
-    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb; Integrated Security = true;"
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb; Integrated Security = true;",
+    //"sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = bsStoreAppDb; Integrated Security=true; TrustServerCertificate=True;"
   }
 }
