Department Definition, DbSet Definition

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { // Bağlantı dizesi
-    //"sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;",
-    "sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = projectAPIDb_model; Integrated Security=true; TrustServerCertificate=True;"
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;",
+    //"sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = projectAPIDb_model; Integrated Security=true; TrustServerCertificate=True;"
   }
 }
