--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { // Bağlantı dizesi
-    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;",
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;"
     //"sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = projectAPIDb_model; Integrated Security=true; TrustServerCertificate=True;"
+  },
+  // key : value
+  "JwtSettings": {
+    "validIssuer": "projectApi",
+    "validAudience": "http://localhost:3000",
+    "secretKey": "apilogo2024project2024appointmentapilogo",
+    "expires": 60
   }
+
 }
