--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { // Bağlantı dizesi
-    //"sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;"
-    "sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = projectAPIDb_model; Integrated Security=true; TrustServerCertificate=True;"
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = projectAPIDb_model; Integrated Security = true;"
+    //"sqlConnection": "Data Source = HATICEESEROGLU\\MSSQLSERVER02; Initial Catalog = projectAPIDb_model; Integrated Security=true; TrustServerCertificate=True;"
   },
   // key : value
   "JwtSettings": {
